# MoBI-Physio-API

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Custom_API_Auto.py  README.md  SECURITY.md  cleanup_processes.py  minimal_streaming.py  pyproject.toml  test_ctrlc.py
.github/actions/setup-venv/: action.yaml
.github/workflows/: docs.yaml
src/mobi_physio_api/: __init__.py  cli.py  cli_simple.py  device.py  platform_detection.py  sensor_detection.py  streaming.py  utils.py
tests/: test_platform_detection.py  test_sensor_detection.py  test_streaming.py
