[project]
name = "mobi-physio-api"
version = "0.1.0"
description = "A robust, cross-platform Python API for PLUX biosignals devices (EMG, SpO2, EDA, ECG, ACC, etc.) with automatic sensor detection, LSL streaming, and production-ready features."
authors = [
    { name = "Child Mind Institute", email = "dair@childmind.org" }
]
license = "LGPL-2.1"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "pylsl>=1.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
    "deptry>=0.23.0",
    "pytest>=8.4.1",
]
docs = [
    "pdoc>=15.0.0"
]

[project.urls]
Homepage = "https://github.com/childmindresearch/MoBI-Physio-API"
Repository = "https://github.com/childmindresearch/MoBI-Physio-API"
Documentation = "https://childmindresearch.github.io/MoBI-Physio-API"

[project.scripts]
mobi-physio-api = "mobi_physio_api.cli_simple:main"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I", "UP", "B", "C4", "PIE", "T20", "RET", "SIM", "PTH"]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
